Added to npm. Updated readme file.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-checkbox",
+  "name": "@dz8540/custom-checkbox",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
